--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-biu!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>BIU</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $("#biu").click(function() {
+                $("#biu-out").append("biu! ");
+            });
+        });
+
+    </script>
+</head>
+<body>
+<div class="container">
+    <div class="mx-auto">
+        <button class="btn btn-primary" id="biu">biu</button>
+    </div>
+    <div id="biu-out"></div>
+</div>
+
+</body>
+</html>
