--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </script>
 </head>
 <body>
-<div class="container">
+<div class="container mt-4">
     <div class="mx-auto">
         <button class="btn btn-primary" id="biu">biu</button>
     </div>
-    <div id="biu-out"></div>
+    <div id="biu-out mt-4"></div>
 </div>
 
 </body>
