--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="mx-auto">
         <button class="btn btn-primary" id="biu">biu</button>
     </div>
-    <div id="biu-out mt-4"></div>
+    <div id="biu-out" class="mt-4"></div>
 </div>
 
 </body>
