--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <div class="container mt-4">
     <div class="mx-auto">
-        <button class="btn btn-primary" id="biu">biu</button>
+        <button class="btn btn-primary" id="biu">arcane barrage</button>
     </div>
     <div id="biu-out" class="mt-4"></div>
 </div>
