--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             $("#biu").click(function() {
                 $("#biu-out").append("biu! ");
             });
+            $("#biu2").click(function() {
+                $("#biu-out").append("biu!! ");
+            });
         });
 
     </script>
@@ -20,6 +23,7 @@
 <div class="container mt-4">
     <div class="mx-auto">
         <button class="btn btn-primary" id="biu">arcane barrage</button>
+        <button class="btn btn-primary" id="biu2">ice lance</button>
     </div>
     <div id="biu-out" class="mt-4"></div>
 </div>
