--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <div class="container mt-4">
     <div class="mx-auto">
-        <button class="btn btn-primary" id="biu">arcane barrage</button>
+        <button class="btn btn-info" id="biu">arcane barrage</button>
         <button class="btn btn-primary" id="biu2">ice lance</button>
     </div>
     <div id="biu-out" class="mt-4"></div>
