--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             $("#biu2").click(function() {
                 $("#biu-out").append("biu!! ");
             });
+            $("#biu3").click(function() {
+                $("#biu-out").append("biu!!!! ");
+            });
         });
 
     </script>
@@ -24,6 +27,7 @@
     <div class="mx-auto">
         <button class="btn btn-info" id="biu">arcane barrage</button>
         <button class="btn btn-primary" id="biu2">ice lance</button>
+        <button class="btn btn-danger" id="biu3">pyroblast</button>
     </div>
     <div id="biu-out" class="mt-4"></div>
 </div>
